<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">MTProto List</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-5111357348858303~7242622740</string>
    <string name="b1" translatable="false">ca-app-pub-5111357348858303/5737969381</string>
    <string name="ad_unit_id" translatable="false">ca-app-pub-5111357348858303/8762163170</string>
    <string name="run1" translatable="false">ca-app-pub-5111357348858303/7192025232</string>
    <string name="rewardedId" translatable="false">ca-app-pub-5111357348858303/3854002291</string>

    <string name="tab_mtproto" translatable="false">MTProto</string>
    <string name="tab_webproxy" translatable="false">WebProxy</string>

    <string name="action_proxy_connect">Click to connect via proxy</string>
    <string name="action_glype_connect">Go to proxy</string>
    <string name="proxy_port">Port:</string>
    <string name="proxy_type_label">Type:</string>
    <string name="data_successfully_updated">Data successfully updated</string>
    <string name="msg_no_notes1" translatable="false">Data is empty\nCheck\nNetwork settings,\nDataUsageSummary\nand</string>
    <string name="msg_no_notes2" translatable="false">Please Update Google Play Service</string>
    <string name="part1">Network settings</string>
    <string name="part2" translatable="false">DataUsageSummary</string>
    <string name="share_proxy_data">Share proxy</string>
    <string name="share_qr_code" translatable="false">Share QRcode</string>
    <string name="action_mirror">Proxy Site Mirror</string>
    <string name="err_telegram_client_not_unstalled">Telegram client not installed</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>

    <string name="action_settings">Settings</string>
    <string name="action_share_app">Share App</string>
    <string name="action_rate_app">Rate App</string>
    <string name="action_discover_more_app">Discover More Apps</string>
    <string name="action_about">About</string>
    <string name="action_privacy_policy">Privacy Policy</string>

    <string name="pref_category_lang">Localization</string>
    <string name="pref_title_lang">Language selection</string>
    <string name="pref_category_other">Additionally</string>
    <string name="pref_title_copyright" translatable="false">Copyright</string>
    <string name="pref_title_dev_name">Developed By</string>
    <string name="pref_title_more">Other applications</string>
    <string name="pref_title_contributors">Contributors</string>
    <string name="pref_title_night_mode">Night mode</string>
    <string name="pref_summary_copyright" translatable="false">Created by Walhalla %1$d Dynamics. \nAll right reserved</string>
    <string name="pref_summary_contributors" translatable="false">WhD, Abuzer Rafey, Siddiqov Mukhriddin</string>

    <string name="wv_menu_home">Home</string>
    <string name="wv_menu_copy_url">Copy current URL to Buffer</string>
    <string name="wv_menu_clear_cookies">Clear Cookies</string>
    <string name="wwPageUpdated">Page updated</string>
    <string name="action_exit">Exit</string>

    <string name="country">Country: %1$s</string>
    <string name="country_code">Country Code: %1$s</string>
    <string name="region">Region: %1$s</string>
    <string name="region_name">Region Name: %1$s</string>
    <string name="city">City: %1$s</string>
    <string name="zip">ZIP Code: %1$s</string>
    <string name="lat_lon">Latitude and Longitude: %1$f, %2$f</string>
    <string name="timezone">Timezone: %1$s</string>
    <string name="isp">Internet Service Provider: %1$s</string>
    <string name="org">Organization: %1$s</string>
    <string name="as_info">AS Information: %1$s</string>

    <string name="disclaimer_title" translatable="false">Disclaimer</string>
    <string name="disclaimer_message" translatable="false">This service is provided as is, without warranty of any kind. Use of this service is entirely at your own risk. We cannot take responsibility for any direct or indirect damages resulting from the use of this service.\n
            The service allows indirect browsing of external, third-party websites. We are not responsible for the content on any external websites that may be accessible through our service. A website viewed through our service is in no way owned by or associated with this website.\n
            The term \"indirect browsing\" refers to the server which you connect to. During \"direct\" browsing, you connect to the server which provides the resource you are requesting. During \"indirect\" browsing, you connect to our server. Our script downloads the requested resource and forwards it to you.\n
            Any resource (such as web pages, images, files) downloaded through our service may be modified. This may include, but is not limited to, editing URLs so that any resources referenced by the target resource are also downloaded indirectly. The accuracy and reliablity of this process is not guaranteed. The resource which you receive may not be an accurate representation of the resource requested.\n
            A side-effect of indirect browsing may be anonymity. By connecting to our server instead of the target server, the target server does not see your IP address. However, we do not guarantee our service will be truly anonymous. The downloaded resource may reference other resources which your browser may automatically download. The service attempts to reroute all such requests through our server but may not be entirely successful. A single direct request will compromise your anonymity.\n
            This service may download a resource over a secure connection but this may be sent back to you over an unsecure connection. Do not enter confidential information unless you are on a secure connection to our server.</string>
    <string name="button_agree" translatable="false">Agree</string>
</resources>
