<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:paddingStart="0dp"
    android:paddingLeft="0dp"
    android:paddingEnd="0dp"
    android:paddingRight="0dp"
    android:paddingBottom="0dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#E1E6F1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp">

            <LinearLayout
                android:id="@+id/r1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="0dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/personPhoto"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:adjustViewBounds="true"
                    android:background="#E8E8E8"
                    android:contentDescription="@null"
                    android:minHeight="64dp"
                    tools:src="@drawable/ic_unknown" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proxy_port"
                    android:textColor="#030303"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/port"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    tools:text="@string/app_name" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/control"
                android:layout_toEndOf="@+id/r1"
                android:orientation="vertical">

                <!--1B1B1B-->

                <!--                android:background="#FFFF00"-->

                <RelativeLayout
                    android:id="@+id/icon_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:padding="0dp">


                    <TextView
                        android:id="@+id/hostName"
                        style="@style/AppTheme.H1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textStyle="bold"
                        tools:text="@string/app_name" />

                    <TextView
                        android:id="@+id/description"
                        style="@style/AppTheme.Description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/hostName"
                        android:layout_marginStart="8dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        tools:text="@string/app_name" />

                    <!--                    <ImageView-->
                    <!--                        android:id="@+id/iv_icon"-->
                    <!--                        android:layout_width="match_parent"-->
                    <!--                        android:layout_height="match_parent"-->
                    <!--                        android:layout_centerHorizontal="true"-->
                    <!--                        android:layout_centerVertical="true"-->
                    <!--                        android:adjustViewBounds="true"-->
                    <!--                        android:contentDescription="@string/app_name"-->
                    <!--                        android:padding="5dp"-->
                    <!--                        app:srcCompat="@mipmap/ic_launcher_round" />-->

                    <!--                    android:background="#FF544A"-->

                    <ImageView
                        android:id="@+id/ivLock"
                        android:layout_width="@dimen/iv_lock_width"
                        android:layout_height="@dimen/iv_lock_width"

                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/round_t2"

                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="2dp"
                        android:layout_marginEnd="35dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@null"
                        android:maxHeight="@dimen/iv_lock_width"
                        android:minHeight="@dimen/iv_lock_width"
                        android:scaleType="centerCrop"
                        android:visibility="gone"
                        tools:src="@drawable/ic_lock"
                        tools:visibility="visible" />
                </RelativeLayout>


                <Button
                    android:id="@+id/action_connect"
                    style="@style/button_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dip"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dip"
                    android:paddingStart="4dp"
                    android:paddingLeft="4dp"
                    android:paddingEnd="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/action_proxy_connect"
                    android:theme="@style/button_main" />


                <!--<Button-->
                <!--android:layout_marginLeft="20dp"-->
                <!--android:layout_marginRight="20dp"-->

                <!--android:layout_marginTop="12.0dip"-->
                <!--android:layout_marginBottom="10.0dip"-->

                <!--android:id="@+id/action_connect"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center"-->
                <!--android:paddingStart="18dp"-->
                <!--android:paddingLeft="18dp"-->
                <!--android:paddingEnd="18dp"-->
                <!--android:paddingRight="18dp"-->
                <!--android:text="@string/proxy_connect"-->
                <!--android:theme="@style/button_main"-->
                <!--android:layout_marginStart="8dp" />-->

            </LinearLayout>


            <LinearLayout
                android:id="@+id/control"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:padding="0dp">

                <ImageButton
                    android:id="@+id/info"
                    style="@style/IB0"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginBottom="2dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_menu_info"
                    tools:text="@string/app_name" />

                <ImageButton
                    android:id="@+id/actionDelete"
                    style="@style/IB1"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginBottom="2dp"
                    android:contentDescription="@null"
                    android:src="@drawable/empty"
                    tools:text="@string/app_name" />

                <ImageButton
                    android:id="@+id/action_view"
                    style="@style/IB1"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginBottom="2dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_remove_red_eye_black_24dp"
                    tools:text="@string/app_name" />


                <ImageButton
                    android:id="@+id/action_share"
                    style="@style/IB2"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginBottom="2dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_share"
                    tools:text="@string/app_name" />

                <ImageButton
                    android:id="@+id/action_qr"
                    style="@style/IB3"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_qr_code"
                    tools:text="@string/app_name" />

            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>